# ma2_show_analyzer

./: .gitignore  PATCH_LAYER.md  README.md  pyproject.toml  run_analysis.bat  run_analysis.ps1  run_analysis.py  run_web_app.bat  run_web_app.py
examples/: sample_patch.csv  sample_presets.xml
exports/: CH_F_channel_patch.xml  CH_F_fixture_patch.xml  Fix.xml  Studio54_groups.xml  Studio54_patch.xml  Studio54_preset_0.xml  Studio54_preset_2.xml  Tram_Analyz_groups.xml  Tram_Analyz_preset_0.xml  Tram_Analyz_preset_2.xml  Tram_Analyz_preset_4.xml
lua/: export_patch.lua  export_patch.xml  export_preset_diagnostic.lua  export_preset_diagnostic.xml  export_show_bundle.lua  export_show_bundle.xml
out2/: analysis_overview.md  cues.csv  patch_fixtures.json  presets.csv  sequences.csv  value_atoms.csv
out_chanid_check/: control_balance.csv  cue_list.html  cue_quality.csv  cue_quality.html  explorer.html  explorer_cytoscape.html  explorer_d3.html  explorer_sankey.html  fixture_usage.csv  object_index.json  presets.csv  sequence_inspector.css  sequence_inspector.html  topology_graphs.html
out_chanid_check_2/: analysis_overview.md  consistency_issues.csv  dashboard.html  explorer_radial.html  object_liveness.csv  patch.html  patch_target_usage.csv  sequence_content.html  sequence_inspector_utils.js  summary.json  warnings.html
out_dimmer_check/: analysis_overview.md  audit_report.md  cue_list.html  explorer_cytoscape.html  sequence_content.csv  sequence_content.html  show_model_v2.json  warnings.html
out_dimmer_check_2/: dashboard.html  explorer.html  explorer_d3.html  (+7 more)
(+377 files in other folders)
